--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "Nikita Gorobets",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
     "browser-sync": "^2.29.3",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-avif": "^1.1.1",
+    "gulp-avif-webp-html": "^1.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
@@ -25,6 +29,7 @@
     "gulp-svg-sprite": "^2.0.3",
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify-es": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "gulp-webp": "^4.0.1",
     "make-dir": "^4.0.0",
     "sass": "^1.63.6",
